--- a/MusicSearch/Base.lproj/Main.storyboard
+++ b/MusicSearch/Base.lproj/Main.storyboard
@@ -53,38 +53,43 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="q4p-zq-IDn"/>
                                 </connections>
                             </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="55" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VeT-qF-SqA">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="65" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VeT-qF-SqA">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" red="0.17254901960784313" green="0.18431372549019609" blue="0.20784313725490194" alpha="0.48672945205479451" colorSpace="calibratedRGB"/>
                                 <color key="separatorColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TrackCell" id="ozj-Qy-hiF" customClass="TrackTableViewCell">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="55"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="65"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ozj-Qy-hiF" id="l8B-We-Fti">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="54"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vl7-QH-WNU">
-                                                    <rect key="frame" x="10" y="5" width="250" height="30"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="coh-QA-juL">
+                                                    <rect key="frame" x="5" y="5" width="55" height="55"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="Zlj-5b-w7S"/>
-                                                        <constraint firstAttribute="width" constant="250" id="pgB-l9-Pf7"/>
+                                                        <constraint firstAttribute="width" secondItem="coh-QA-juL" secondAttribute="height" multiplier="1:1" id="skZ-GW-tEN"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vl7-QH-WNU">
+                                                    <rect key="frame" x="70" y="6" width="231.5" height="37.5"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
                                                     <color key="textColor" red="0.71372549019607845" green="0.71764705882352942" blue="0.71764705882352942" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8vi-g6-chY">
-                                                    <rect key="frame" x="10" y="35" width="200" height="15"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8vi-g6-chY">
+                                                    <rect key="frame" x="70" y="43.5" width="200" height="15"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="200" id="1Zi-H1-8Lp"/>
+                                                        <constraint firstAttribute="height" constant="15" id="NcJ-LM-fgQ"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
                                                     <color key="textColor" red="0.32549019607843138" green="0.33725490196078434" blue="0.36078431372549019" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NgX-Fv-a5R">
-                                                    <rect key="frame" x="328" y="5" width="44" height="44"/>
+                                                    <rect key="frame" x="321.5" y="7" width="50.5" height="50.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="NgX-Fv-a5R" secondAttribute="height" multiplier="1:1" id="psL-Ts-BhH"/>
                                                     </constraints>
@@ -94,31 +99,26 @@
                                                         <action selector="previewButtonAction:" destination="ozj-Qy-hiF" eventType="touchUpInside" id="6wD-8x-uUS"/>
                                                     </connections>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$45.66" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HMa-wV-uxQ">
-                                                    <rect key="frame" x="268" y="15" width="50" height="25"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="25" id="XBR-bg-LIl"/>
-                                                        <constraint firstAttribute="width" constant="50" id="vZ7-Cx-b3e"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
-                                                    <color key="textColor" red="0.71206217913754821" green="0.71911229972306845" blue="0.71911229972306845" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Vl7-QH-WNU" firstAttribute="leading" secondItem="l8B-We-Fti" secondAttribute="leading" constant="10" id="25t-oF-eLG"/>
-                                                <constraint firstItem="NgX-Fv-a5R" firstAttribute="top" secondItem="l8B-We-Fti" secondAttribute="top" constant="5" id="48N-AB-ThE"/>
-                                                <constraint firstItem="Vl7-QH-WNU" firstAttribute="top" secondItem="l8B-We-Fti" secondAttribute="top" constant="5" id="86C-1P-zwU"/>
+                                                <constraint firstItem="NgX-Fv-a5R" firstAttribute="top" secondItem="l8B-We-Fti" secondAttribute="top" constant="7" id="48N-AB-ThE"/>
+                                                <constraint firstItem="Vl7-QH-WNU" firstAttribute="top" secondItem="l8B-We-Fti" secondAttribute="top" constant="6" id="86C-1P-zwU"/>
+                                                <constraint firstAttribute="bottom" secondItem="coh-QA-juL" secondAttribute="bottom" constant="4" id="9cn-v8-zaQ"/>
+                                                <constraint firstItem="Vl7-QH-WNU" firstAttribute="leading" secondItem="coh-QA-juL" secondAttribute="trailing" constant="10" id="JgI-PQ-oZs"/>
+                                                <constraint firstItem="8vi-g6-chY" firstAttribute="leading" secondItem="coh-QA-juL" secondAttribute="trailing" constant="10" id="JqP-4U-GWX"/>
+                                                <constraint firstItem="coh-QA-juL" firstAttribute="top" secondItem="l8B-We-Fti" secondAttribute="top" constant="5" id="LNJ-do-gbZ"/>
+                                                <constraint firstItem="8vi-g6-chY" firstAttribute="top" secondItem="Vl7-QH-WNU" secondAttribute="bottom" id="TE5-tZ-t7k"/>
+                                                <constraint firstItem="NgX-Fv-a5R" firstAttribute="leading" secondItem="Vl7-QH-WNU" secondAttribute="trailing" constant="20" id="Try-6V-A1k"/>
+                                                <constraint firstAttribute="bottom" secondItem="8vi-g6-chY" secondAttribute="bottom" constant="6" id="Zld-KY-5cJ"/>
+                                                <constraint firstItem="coh-QA-juL" firstAttribute="leading" secondItem="l8B-We-Fti" secondAttribute="leading" constant="5" id="hC8-DN-6Bn"/>
                                                 <constraint firstAttribute="trailing" secondItem="NgX-Fv-a5R" secondAttribute="trailing" constant="3" id="hkL-0Y-Nkw"/>
-                                                <constraint firstItem="NgX-Fv-a5R" firstAttribute="leading" secondItem="HMa-wV-uxQ" secondAttribute="trailing" constant="10" id="jm2-eL-2w5"/>
-                                                <constraint firstAttribute="bottom" secondItem="NgX-Fv-a5R" secondAttribute="bottom" constant="5.5" id="kue-HP-Lqg"/>
-                                                <constraint firstItem="HMa-wV-uxQ" firstAttribute="centerY" secondItem="l8B-We-Fti" secondAttribute="centerY" id="rex-1s-MMo"/>
+                                                <constraint firstAttribute="bottom" secondItem="NgX-Fv-a5R" secondAttribute="bottom" constant="7" id="kue-HP-Lqg"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.17254901960784313" green="0.18431372549019609" blue="0.20784313725490194" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <outlet property="artistLabel" destination="8vi-g6-chY" id="XSc-fV-HlV"/>
-                                            <outlet property="priceLabel" destination="HMa-wV-uxQ" id="fUP-SK-9DY"/>
+                                            <outlet property="logoImageView" destination="coh-QA-juL" id="xdT-fE-B1z"/>
                                             <outlet property="trackLabel" destination="Vl7-QH-WNU" id="KvH-6X-1zx"/>
                                             <segue destination="jXp-hS-BlJ" kind="show" identifier="DetailVC" id="z8G-la-KWk"/>
                                         </connections>
